# dggal-rust

./: .gitignore  .gitmodules  Cargo.toml  NOTES.md  README.md  build.rs  do.sh  fetchAndBuild.sh  reset.sh
crates/dggal/: Cargo.toml  libdggal.rlib
crates/dggal/lib/: libdggal.rlib
crates/dggal_sys/: Cargo.toml  libdggal_sys.rlib
crates/dggal_sys/lib/: libdggal_sys.rlib
crates/dggal_sys/src/: lib.rs
crates/ecrt_sys/: Cargo.toml  build.rs
crates/ecrt_sys/lib/: libecrt_sys.rlib
crates/ecrt_sys/src/: lib.rs
dggal/: Cargo.toml
dggal-rust/: Cargo.toml
dggal-rust/src/: lib.rs
dggal-sys/: Cargo.toml  build.rs
dggal-sys/src/: lib.rs
dggal/src/: lib.rs
dst/dggal_sys/: Cargo.toml  build.rs
dst/ecrt_sys/: Cargo.toml
ecdev-rust/: Cargo.toml  build.old
ecrt/: Cargo.toml
ecrt-sys/: Cargo.toml  build.rs
ecrt-sys/src/: lib.rs
ecrt/src/: lib.rs
src/: dggal_cffi.rs  ecrt_cffi.rs  lib.rs
src/bindings/: dggal.rs  ecrt.rs
src/ffi/: dggal_cffi.rs  ecrt_cffi.rs
