[package]
name = "dggal-sys"
version = "0.1.2"
edition = "2021"
description = "The dggal-sys crate"
license-file = "LICENSE"
links = "dggal_cStatic"  # Needed if linking C libs

[lib]
name = "dggal_sys"
path = "src/lib.rs"
crate-type = ["rlib"]


[dependencies]
ecrt-sys = { path = "../ecrt-sys" }
ecrt = { path = "../ecrt" }
